# bill-pdf-to-firefly

./: .gitignore  CLAUDE.md  Dockerfile  README.md  cli.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/models/: database.py  statement.py
app/parsers/: __init__.py  base_parser.py  esun_parser.py  fubon_parser.py  sinopac_parser.py  taishin_parser.py
app/routers/: statements.py  webhook.py
app/services/: firefly_service.py  gmail_service.py  import_service.py  mail_classifier.py  pdf_service.py
app/utils/: account_mapper.py  pdf_utils.py
config/: config.example.yaml
