[project]
name = "bill-pdf-to-firefly"
version = "1.0.0"
description = "信用卡對帳單自動化處理系統 - 從 Gmail 接收對帳單，解析 PDF，匯入 Firefly III"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.35",
    "sqlmodel>=0.0.22",
    "pdfplumber>=0.11.4",
    "pikepdf>=9.2.1",
    "google-api-python-client>=2.149.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
    "apscheduler>=3.10.4",
    "python-multipart>=0.0.12",
]

[project.scripts]
cc-parser = "cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
